# dodecet-encoder

./: .gitignore  ARCHITECTURE_DIAGRAM.md  BENCHMARKS.md  CHANGELOG.md  CHARTER.md  CI_CD_GUIDE.md  CONTRIBUTORS.md  Cargo.toml  DISCLAIMERS.md  DOCKSIDE-EXAM.md  EXAMPLES_SUMMARY.md  FAQ.md  GETTING_STARTED_GUIDE.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLES.md  INTEGRATION_GUIDE.md  INTEGRATION_VALIDATION_REPORT.md  MIGRATION_GUIDE.md  ONBOARDING.md  PERFORMANCE_BENCHMARK_REPORT.md  PERFORMANCE_OPTIMIZATION.md  PHASE_4_FINAL_REPORT.md  PHASE_4_PLAN.md  PUBLICATION_GUIDE.md  PUBLICATION_READINESS_REPORT.md  PUBLICATION_REVIEW_CHECKLIST.md  README.md  README_WASM.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  ROUND_3_COMPLETION_REPORT.md  ROUND_3_COMPLETION_SUMMARY.md  ROUND_4_COMPLETION_REPORT.md  ROUND_4_SUMMARY.md  ROUND_5_V1.0.0_RELEASE_SUMMARY.md  ROUND_8_DELIVERABLES.md  ROUND_8_SUMMARY.md  (+15 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: ci.yml  release.yml  test-coverage.yml  wasm-build.yml
benches/: dodecet_benchmark.rs
docs/: API_REFERENCE.md  PHASE_4_COMPLETION.md  QUICK_START.md  WASM_INTEGRATION_GUIDE.md
examples/: README.md  advanced_optimization.rs  basic_usage.rs  cellular_agents.rs  comprehensive_integration.rs  constrainttheory_integration.js  entropy_calculation.rs  geometric_shapes.rs  hex_editor.rs  holonomy_transport.rs  path_planning.rs  performance_comparison.rs  pythagorean_snapping.rs  rigidity_matroid.rs  wasm_integration.html  web_integration.html  webgl_integration.rs
src/: README.md  array.rs  calculus.rs  dodecet.rs  geometric.rs  hex.rs  lib.rs  simd.rs  string.rs  string_optimized.rs  wasm.rs
tests/: edge_cases.rs  wasm_integration.rs
tests/compatibility/: browser_tests.rs
tests/integration/: wasm_integration.rs
tests/performance/: benchmarks.rs
tests/utils/: test_runner.rs
tests/wasm/: wasm_package_tests.rs
tutorials/: 00_GETTING_STARTED.md  01_BASIC_OPERATIONS.md  02_GEOMETRIC_OPERATIONS.md  03_CALCULUS_OPERATIONS.md  04_INTEGRATION.md  05_ADVANCED_USAGE.md
typescript/: dodecet_encoder.d.ts
wasm/: .npmignore  BUILD_GUIDE.md  Cargo.toml  INSTALLATION.md  Makefile  PHASE_4_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md  build.bat  build.sh  package.json
wasm/examples/: index.html
wasm/src/: lib.rs
wasm/tests/: test.js
