[package]
name = "dodecet-encoder"
version = "0.1.0"
edition = "2021"
authors = ["SuperInstance Team"]
license = "MIT"
description = "A 12-bit dodecet encoding system optimized for geometric and calculus operations"
repository = "https://github.com/SuperInstance/dodecet-encoder"
keywords = ["encoding", "geometry", "12-bit", "dodecet", "math"]
categories = ["encoding", "mathematics", "data-structures"]

[lib]
name = "dodecet_encoder"
path = "src/lib.rs"

[dependencies]
# For hex encoding/decoding
hex = "0.4"

# For SIMD operations
paste = "1.0"

# For optional serialization support
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# For geometric operations
nalgebra = { version = "0.32", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
geometry = ["dep:nalgebra"]

[[bench]]
name = "dodecet_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
