[package]
name = "dodecet-encoder"
version = "1.1.0"
edition = "2021"
authors = ["SuperInstance Team <team@superinstance.ai>"]
license = "MIT OR Apache-2.0"
description = "A 12-bit dodecet encoding system optimized for geometric and calculus operations"
repository = "https://github.com/SuperInstance/dodecet-encoder"
homepage = "https://superinstance.ai"
documentation = "https://docs.rs/dodecet-encoder"
readme = "README.md"
keywords = ["encoding", "geometry", "12-bit", "dodecet", "math", "wasm", "3d", "vector", "calculus"]
categories = ["encoding", "mathematics", "data-structures", "wasm", "graphics"]
exclude = [
    "/.github",
    "/target",
    "/wasm/pkg",
    "/examples",
    "/tutorials",
    "/docs",
    "*.md",
    "!README.md",
    "!CHANGELOG.md"
]
rust-version = "1.70"

[lib]
name = "dodecet_encoder"
path = "src/lib.rs"

[dependencies]
# For hex encoding/decoding
hex = "0.4"

# For SIMD operations
paste = "1.0"

# For optional serialization support
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# For geometric operations
nalgebra = { version = "0.32", optional = true }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
wasm-bindgen-test = "0.3"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
geometry = ["dep:nalgebra"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]

[[bench]]
name = "dodecet_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

# WASM-specific optimizations
[profile.release-wasm]
inherits = "release"
opt-level = "s"
overflow-checks = false
